# Exile

./: .gitignore  .gitmodules  README.md  Shell.lnk  meson.build  meson_options.txt  notes.txt  progress.txt  shaders.bat  shell.bat  style.txt  todo.txt
data/: shader.frag  shader.vert  store.txt
data/assets/: chinese.txt  engine.txt  exile.json  game.txt  store.txt
data/shaders/: 3d.f  3d.v  basic_2D.f  basic_2D.v  basic_fragment.f  basic_vertex.v  chunk.f  chunk.g  chunk.v  composite.f  cubemap.f  cubemap.v  dbg.f  dbg.v  gui.f  gui.v  mesh_2d_col.f  mesh_2d_col.v  mesh_2d_tex.f  mesh_2d_tex.v  mesh_2d_tex_col.f  mesh_2d_tex_col.v  mesh_3d_tex.f  mesh_3d_tex.v  mesh_3d_tex_instanced.f  mesh_3d_tex_instanced.v  mesh_chunk.f  mesh_chunk.v  mesh_lines.v  pointcloud.f  pointcloud.v  skydome.f  skyfar.f  skyfar.v  tex_2D.v  tex_fragment.f  tex_vertex.v  util.glsl
data/shaders/deferred/: comp_light.f  comp_resolve_light.f  compose.v  defer.f  defer.v  defer_inc.glsl  defer_ms.f  defer_stencil.v  dir.f  dir_ms.f  light.f  light.v  light_ms.f  noop.f  point.f  point.v  point_ms.f  stencil.v
data/shaders/effects/: comp_light.f  comp_resolve_light.f  composite.f  composite_ms.f  composite_resolve.f  defer.f  defer_ms.f  effect.v  gamma.f  invert.f  resolve.f
data/shaders/env/: pointcloud.f  skydome.f  skydome.v
data/shaders/mesh/: 2D_col.v  2D_tex_col.f  2d_col.f  3d_tex.g  3d_tex.v  lines.f
src/: alloc.cpp  alloc.h  alloc.hpp  array.cpp  array.h  asset.cpp  asset.h  asset_builder.cpp  basic_types.h  blocks.cpp  blocks.h  cave.odin  common.h  common.hpp  common.odin  compile.cpp  console.cpp  console.h  context_strings.h  dbg.cpp  dbg.h  dbg_gui.cpp  dbg_gui.h  engine.cpp  engine.h  events.cpp  events.h  everything.cpp  everything.h  exile.cpp  exile.h  functions.cpp  functions.h  game.cpp  game.h  game_main.cpp  gfx.cpp  gfx.h  gui.cpp  gui.h  (+57 more)
src/alloc/: alloc.hpp
src/cam/: cam.hpp
src/chunk/: chunk.cpp  chunk.hpp
src/dbg/: debug.cpp  debug.hpp
src/depreciated/: gui.cpp  gui.h
src/ds/: array.cpp  array.h  buffer.cpp  buffer.h  functions.cpp  functions.h  heap.cpp  heap.h  map.cpp  map.h  queue.cpp  queue.h  stack.cpp  stack.h  string.cpp  string.h  threadpool.cpp  threadpool.h  vector.cpp  vector.h
src/engine/: OLD_COMPILE.h  asset.cpp  asset.h  basic.h  compile.h  dbg.cpp  dbg.h  engine.cpp  engine.h  events.cpp  events.h  gui.cpp  gui.h  imgui.cpp  imgui.h  log.cpp  log.h  log_html.h  math.cpp  math.h  render.cpp  render.h  render_commands.cpp  render_commands.h  threadpool.cpp  threadpool.h  threads.cpp  threads.h
src/engine/ds/: alloc.cpp  alloc.h  array.cpp  array.h  array.inl  buffer.cpp  buffer.h  buffer.inl  heap.cpp  heap.h  heap.inl  map.cpp  map.h  map.inl  new_alloc.cpp  new_alloc.h  queue.cpp  queue.h  queue.inl  stack.cpp  stack.h  stack.inl  string.cpp  string.h  string.inl  vector.cpp  vector.h  vector.inl
src/engine/platform/: gl.cpp  gl.h  platform_api.h  platform_main.cpp  platform_strings.cpp  platform_strings.h
src/engine/platform/SDL/: platform_SDL.cpp  platform_SDL.h  platform_SDL_api.h
src/engine/platform/linux/: platform_linux.cpp  platform_linux.h
src/engine/platform/windows/: platform_api_win32.h  platform_win32.cpp  platform_win32.h  platform_win32_api.h  windows.h
src/engine/test/: math.cpp  math_test.cpp  test.h
src/engine/util/: atomic.cpp  atomic.h  basic_types.h  context.cpp  context.h  fptr.cpp  fptr.h  fscope.h  reflect.cpp  reflect.h  reflect.inl  threadstate.cpp  threadstate.h  type_table.cpp  type_table.h
src/game/: compile.cpp  console.cpp  console.h  exile.cpp  exile.h  gfx.cpp  gfx.h  gfx_mesh.h  world.cpp  world.h
src/gl/: gl.cpp  gl.hpp
src/gl/cam/: cam.h
src/glfw/: glfw_manager.cpp  glfw_manager.hpp
src/glfw_manager/: glfw_manager.cpp  glfw_manager.hpp
src/gui/: dbg_gui.cpp  dbg_gui.h  imgui_ext.h  profiler_gui.cpp  profiler_gui.h
src/lib/: 3d_math.h  alloc.cpp  alloc.h  alloc_after.h  alloc_after.inl  alloc_before.h  alloc_before.inl  array.h  basic.h  everything.h  hash.h  heap.h  lib.h  log.h  log.inl  log_after.h  log_before.h  map.h  math.h  printf.h  printf_after.h  printf_after.inl  printf_before.h  printf_before.inl  profiler.cpp  profiler.h  queue.h  reflect.cpp  reflect.h  reflect.inl  stack.h  string.cpp  string.h  string_after.h  string_after.inl  string_before.h  string_before.inl  v_vec.h  vec.h  vect.h  (+1 more)
src/logger/: log.cpp  log.hpp
src/platform/: gl.h  platform_api.h  platform_api_linux.h  platform_api_win32.h  platform_linux.cpp  platform_linux.h  platform_main.cpp  platform_strings.cpp  platform_win32.cpp  platform_win32.h  windows.h  wintest.cpp
src/platform/SDL/: platform_SDL.cpp  platform_SDL.h  platform_api_SDL.h
src/platform/linux/: platform_api_linux.h  platform_linux.cpp  platform_linux.h
src/platform/windows/: platform_win32.cpp  platform_win32.h  windows.h
src/render/: vulkan.cpp  vulkan.h
src/str/: context_strings.cpp  strings.cpp  strings.h
src/tools/: asset_builder.cpp  meta.cpp  meta_test.cpp  older.cpp
src/util/: basic_types.h  context.cpp  context.h  fptr.cpp  fptr.h  fscope.cpp  fscope.h  templ.h  threadstate.cpp  threadstate.h  type_table.h
src/window_manager/: window_manager.cpp  window_manager.hpp
