option('bounds_check', type : 'boolean', value : true, description : 'Perform Bounds Checking')
option('block_on_err', type : 'boolean', value : true, description : 'Block on Err-Level Logs')
option('zero_arena', type : 'boolean', value : false, description : 'Clear Temp Arenas Every Frame')
option('check_plt', type : 'boolean', value : true, description : 'Validate Platform Functions')
option('profile', type : 'boolean', value : true, description : 'Perform Function Timing')
option('leak_check', type : 'boolean', value : true, description : 'Validate Net Zero Allocations on Close')
option('gl_check', type : 'boolean', value : true, description : 'Enable OpenGL Debug Messaging')
option('fast_close', type : 'boolean', value : false, description : 'Close Without Waiting for Jobs')
option('platform', type : 'combo', choices : ['win32', 'sdl'], value : 'win32')
